--- a/client/package.json
+++ b/client/package.json
@@ -19,15 +19,12 @@
   },
   "scripts": {
     "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
-    "build": "npm run build-css && react-scripts build",
+    "start": "npm start-js",
+    "build": "npm run react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "build-css": "node-sass-chokidar src/sass/App.scss -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/sass/App.scss -o src/ --watch --recursive",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "redux-logger": "^3.0.6"
   }
