--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start-js": "react-scripts start",
-    "start": "npm start-js",
+    "start": "npm run start-js",
     "build": "npm run react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
